# pterm

./: .gitignore  CMakeLists.txt  main.c  makefile  pterm.c  pterm.def  pterm.h  readme.md  t.py
.github/workflows/: ci.yml
pterm/: ColorConversion.py  ImageConversion.py  __init__.py
scripts/test/: test.py
